--- a/.github/workflows/docker-podman-publish.yml
+++ b/.github/workflows/docker-podman-publish.yml
@@ -18,8 +18,9 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   #IMAGE_NAME: ${{ github.repository }}
-  #IMAGE_NAME: "dragorse/podman_kustomize"
-  IMAGE_NAME: ${{ github.actor }}/podman_kustomize
+  #IMAGE_NAME: "shclub/podman_kustomize"
+  IMAGE_NAME: "dragorse/podman_kustomize"
+  #IMAGE_NAME: ${{ github.actor }}/podman_kustomize
   #IMAGE_REGISTRY: ghcr.io/${{ github.repository_owner }}
 
 
